--- a/references.bib
+++ b/references.bib
@@ -516,3 +516,60 @@
 	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
 	langid = {en}
 }
+
+@article{king2021,
+	title = {SidechainNet: An all{-}atom protein structure dataset for machine learning},
+	author = {King, Jonathan Edward and Koes, David Ryan},
+	year = {2021},
+	month = {07},
+	date = {2021-07-12},
+	journal = {Proteins: Structure, Function, and Bioinformatics},
+	pages = {1489--1496},
+	volume = {89},
+	number = {11},
+	doi = {10.1002/prot.26169},
+	url = {http://dx.doi.org/10.1002/prot.26169},
+	langid = {en}
+}
+
+@misc{gao2024,
+	title = {FoldToken4: Consistent & Hierarchical Fold Language},
+	author = {Gao, Zhangyang and Tan, Cheng and Li, Stan Z.},
+	year = {2024},
+	month = {08},
+	date = {2024-08-04},
+	url = {http://dx.doi.org/10.1101/2024.08.04.606514}
+}
+
+@article{vankempen2023,
+	title = {Fast and accurate protein structure search with Foldseek},
+	author = {van Kempen, Michel and Kim, Stephanie S. and Tumescheit, Charlotte and Mirdita, Milot and Lee, Jeongjae and Gilchrist, Cameron L. M. and {Söding}, Johannes and Steinegger, Martin},
+	year = {2023},
+	month = {05},
+	date = {2023-05-08},
+	journal = {Nature Biotechnology},
+	pages = {243--246},
+	volume = {42},
+	number = {2},
+	doi = {10.1038/s41587-023-01773-0},
+	url = {http://dx.doi.org/10.1038/s41587-023-01773-0},
+	langid = {en}
+}
+
+@misc{gao2024a,
+	title = {FoldToken4: Consistent & Hierarchical Fold Language},
+	author = {Gao, Zhangyang and Tan, Cheng and Li, Stan Z.},
+	year = {2024},
+	month = {08},
+	date = {2024-08-04},
+	url = {http://dx.doi.org/10.1101/2024.08.04.606514}
+}
+
+@article{gaujac2024,
+	title = {Learning the Language of Protein Structure},
+	author = {Gaujac, Benoit and {Donà}, {Jérémie} and Copoiu, Liviu and Atkinson, Timothy and Pierrot, Thomas and Barrett, Thomas D.},
+	year = {2024},
+	date = {2024},
+	doi = {10.48550/ARXIV.2405.15840},
+	url = {https://arxiv.org/abs/2405.15840}
+}
